# myhr-ai

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml
services/api/: Dockerfile  pyproject.toml
services/api/app/: main.py
services/api/app/agents/: __init__.py  context.py  hr_data_agent.py  hybrid_agent.py  memory_manager.py  models.py  policy_agent.py  runner.py  session_store.py  supervisor_agent.py
services/api/app/core/: config.py  logging.py
services/api/app/domain/: models.py
services/api/app/infrastructure/: azure_clients.py
services/api/app/schemas/: agent_runtime.py  chat.py  documents.py  hybrid.py  routing.py  sql_planning.py
services/api/app/services/: answer_generation_service.py  chunking_service.py  document_service.py  embedding_service.py  folder_scanning_service.py  grounding_evaluator_service.py  hr_database_cli.py  hr_database_service.py  hybrid_answer_service.py  hybrid_question_service.py  ingestion_cli.py  ingestion_service.py  intent_router_service.py  llm_router_service.py  llm_sql_planner_service.py  llm_sql_repair_service.py  openai_service.py  pdf_extraction_service.py  prompt_builder_service.py  rag_service.py  retriever_service.py  (+6 more)
services/api/data/: agent_memory.sqlite3  hr.sqlite3
services/api/tests/: test_agent_session_store.py  test_api_contract.py  test_document_service.py  test_hr_database_service.py  test_ingestion_service.py  test_llm_router_service.py  test_llm_sql_planner_service.py  test_rag_service.py  test_sql_query_builder_service.py  test_structured_answer_service.py
(+29 files in other folders)
